unittest/bin/src/rl/tests/positive/big_baseline.js
for(var i = 0; i < 100; ++i)
{
	WScript.Echo(i, i*i, i*i*i);
}